--- a/z7/css/default.css
+++ b/z7/css/default.css
@@ -1,6 +1,7 @@
 summary {
 	background: #ffdfbf;
 	font-family: Consolas;
+	color: black;
 	width: 90%;
 	display: table;
 	border-collapse: collapse;
@@ -12,19 +13,30 @@ summary {
 }
 
 summary::before {
-	content: "List of computers:";
-	display: table-row;
+	content: "Podsumowanie";
+	display: block;
 	clear: both;
 	font-size: 28px;
-	margin: 0 0 20px;
+	margin: 10px 0 20px;
 }
 
-summary machine, summary efficient_only {
+summary > * {
 	display: table-row;
 }
 
-efficient_only::before {
-	content: "This list contains efficient machines only: ";
+summary > *:nth-child(2n) {
+	background: rgba(255,255,255, 0.2);
+}
+
+summary > efficient_only::before,
+summary > manufacturer::before,
+summary > year::before,
+summary > date_from::before,
+summary > date_to::before,
+summary > department_name::before,
+summary > minimum_fee::before,
+summary > minimum_class::before,
+summary > purchased_before::before  {
 	display: inline-block;
 	font-weight: bold;
 	font-size: 16px;
@@ -32,19 +44,55 @@ efficient_only::before {
 	color: black;
 }
 
+summary > efficient_only::before {
+	content: "Ta lista zawiera tylko sprawne komputery.";
+}
+
+summary > manufacturer::before {
+	content: "Producent: ";
+} 
+
+summary > year::before {
+	content: "Rok: ";
+}
+
+summary > date_from::before {
+	content: "Data od: ";
+}
+
+summary > date_to::before {
+	content: "Data do: ";
+}
+
+summary > department_name::before {
+	content: "Dział: ";
+}
+
+summary > minimum_fee::before {
+	content: "Minimalny koszt naprawy: ";
+}
+
+summary > minimum_class::before {
+	content: "Minimalna klasa: ";
+}
+
+summary > purchased_before::before {
+	content: "Zakupione przed: ";
+}
+
 efficient_only {
 	color: #ffdfbf;
 	display: block;
 }
 
-machine {
+machine, class, manuf, cost_info, issue, person {
 	margin: 0 2px 5px;
 	padding: 4px;
 	display: table-row;
 	border: 1px solid #777777;
 }
 
-machine *  {
+machine *, class *, manuf *, cost_info *, issue *, person * {
 	border-right: 1px  solid #777777;
 	border-collapse: collapse;
 	padding: 10px;
@@ -52,42 +100,123 @@ machine *  {
 	width: auto;
 }
 
-machine *::before {
+machine *::before,
+class *::before,
+manuf *::before,
+cost_info *::before,
+issue *::before,
+person *::before {
 	margin-right: 4px;
 	font-weight: bold;
 }
 
-machine:first-of-type dep_name::before {
-	content: "department name: ";
+machine:first-of-type > *,
+class:first-of-type > *,
+manuf:first-of-type > *,
+cost_info:first-of-type > *,
+issue:first-of-type > *,
+person:first-of-type > * {
+	padding-top: 0;
+}
+
+machine:first-of-type *::before,
+class:first-of-type *::before,
+manuf:first-of-type *::before,
+cost_info:first-of-type *::before, 
+issue:first-of-type *::before,
+person:first-of-type *::before {
+	border-bottom: 1px solid #777777;
+	background: rgba(0,0,0,0.2);
+    margin: 0 -10px 10px;
+    padding: 10px 10px 0;
+	height: 50px;
+}
+
+*:first-of-type *::before {
 	display: block;
 }
 
-machine serial_number::before {
-	content: "s/n: ";
+*:first-of-type dep_name::before {
+	content: "Nazwa działu";
 }
 
-machine issue_desc::before {
-	content: "desc";
+*:first-of-type serial_number::before {
+	content: "Numer seryjny";
 }
 
-machine repair_fee::before {
-	content: "repair fee: ";
+*:first-of-type issue_desc::before {
+	content: "Opis usterki";
 }
 
-machine :last-child {
-
+*:first-of-type  repair_fee::before {
+	content: "Koszt naprawy";
 }
 
-machine *:hover {
+*:first-of-type class_sm::before {
+	content: "Symbol klasy";
+}
+
+*:first-of-type machines::before {
+	content: "Liczba komputerów";
+}
+
+*:first-of-type mnf_name::before {
+	content: "Producent";
+}
+
+*:first-of-type average_fee::before {
+	content: "Średni koszt naprawy";
+}
+
+*:first-of-type total_fee::before {
+	content: "Całkowity koszt napraw";
+}
+
+*:first-of-type issue_date::before {
+	content: "Data usterki";
+}
+
+*:first-of-type owner_name::before {
+	content: "Imię właściciela";
+}
+
+*:first-of-type owner_surname::before {
+	content: "Nazwisko właściciela";
+}
+
+*:first-of-type class_::before {
+	content: "Klasa";
+}
+
+*:first-of-type machine_desc::before {
+	content: "Opis komputera";
+}
+
+machine *:hover,
+class *:hover,
+manuf *:hover,
+cost_info *:hover,
+issue *:hover,
+person *:hover {
 	background-color: #ffa74f;
 	cursor: pointer;
 }
 
-machine *:active {
+machine *:active,
+class *:active,
+manuf *:active,
+cost_info *:active,
+issue *:active,
+person *:active {
 	background-color: #6cd900;
 }
 
-machine *:active:after {
+machine *:active:after,
+class *:active:after,
+manuf *:active:after,
+cost_info *:active:after,
+issue *:active:after,
+person *:active:after {
 	content: "click!";
 	color: gray;
 }
