--- a/z7/css/dark.css
+++ b/z7/css/dark.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Gafata&subset=latin-ext');
+
 summary {
-	background: #ffdfbf;
-	font-family: Consolas;
-	color: black;
+	background: #2e2f38;
+	font-family: 'Gafata';
+	font-size: 14px;
+	color: white;
 	width: 90%;
 	display: table;
 	border-collapse: collapse;
@@ -14,10 +17,12 @@ summary {
 
 summary::before {
 	content: "Podsumowanie";
+	font-family: 'Fjalla One';
 	display: block;
 	clear: both;
-	font-size: 28px;
+	font-size: 40px;
 	margin: 10px 0 20px;
+	text-shadow: 2px 2px 0 black;
 }
 
 summary > * {
@@ -25,7 +30,8 @@ summary > * {
 }
 
 summary > *:nth-child(2n) {
-	background: rgba(255,255,255, 0.2);
+	background: #313540;
+	color: #a2a2a2;
 }
 
 summary > efficient_only::before,
@@ -39,9 +45,9 @@ summary > minimum_class::before,
 summary > purchased_before::before  {
 	display: inline-block;
 	font-weight: bold;
-	font-size: 16px;
+	font-size: 12px;
 	margin-bottom: 10px;
-	color: black;
+	color: white;
 }
 
 summary > efficient_only::before {
@@ -89,11 +95,12 @@ machine, class, manuf, cost_info, issue, person {
 	margin: 0 2px 5px;
 	padding: 4px;
 	display: table-row;
-	border: 1px solid #777777;
+	border: 1px solid #5f667a;
+	color: #dbdde3;
 }
 
 machine *, class *, manuf *, cost_info *, issue *, person * {
-	border-right: 1px  solid #777777;
+	border-right: 1px  solid #5f667a;
 	border-collapse: collapse;
 	padding: 10px;
 	display: table-cell;
@@ -125,8 +132,8 @@ manuf:first-of-type *::before,
 cost_info:first-of-type *::before, 
 issue:first-of-type *::before,
 person:first-of-type *::before {
-	border-bottom: 1px solid #777777;
-	background: rgba(0,0,0,0.2);
+	border-bottom: 1px solid #5f667a;
+	background: #26272f;
     margin: 0 -10px 10px;
     padding: 10px 10px 0;
 	height: 50px;
@@ -134,6 +141,7 @@ person:first-of-type *::before {
 
 *:first-of-type *::before {
 	display: block;
+	color: white;
 }
 
 *:first-of-type dep_name::before {
@@ -198,7 +206,8 @@ manuf *:hover,
 cost_info *:hover,
 issue *:hover,
 person *:hover {
-	background-color: #ffa74f;
+	background-color: #37323d;
+	color: #988ea4;
 	cursor: pointer;
 }
 
@@ -208,7 +217,10 @@ manuf *:active,
 cost_info *:active,
 issue *:active,
 person *:active {
-	background-color: #6cd900;
+	background-color: #3c3c3c;
+	-webkit-box-shadow: 0px 0px 12px -6px rgba(88,88,89,1);
+	-moz-box-shadow: 0px 0px 12px -6px rgba(88,88,89,1);
+	box-shadow: 0px 0px 12px -6px rgba(88,88,89,1);
 }
 
 machine *:active:after,
@@ -218,5 +230,6 @@ cost_info *:active:after,
 issue *:active:after,
 person *:active:after {
 	content: "click!";
+	margin-left: 10px;
 	color: gray;
 }
