Get theme name from request Minor theme issues

--- a/z7/css/dark.css
+++ b/z7/css/dark.css
@@ -87,7 +87,7 @@ summary > purchased_before::before {
 }
 
 efficient_only {
-	color: rgba(0,0,0,0);
+	color: rgba(0,0,0,0) !important;
 	display: block;
 }
 
